list of algorithms; small BigO change

--- a/contents.tex
+++ b/contents.tex
@@ -37,9 +37,8 @@
 %%      Algorithmenverzeichnis
 %%======================================================================
 %\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
-%\cleardoublepage
-%\addcontentsline{toc}{chapter}{Algorithmenverzeichnis}
-%\listofalgorithms
+\addcontentsline{toc}{chapter}{Algorithmenverzeichnis}
+\listofalgorithms
 
 %%======================================================================
 %%      Abkuerzungsverzeichnis
