--- a/packages.tex
+++ b/packages.tex
@@ -25,7 +25,7 @@
 
 % Für schöne Darstellung von Algorithmen
 \usepackage[german, algoruled, algochapter]{algorithm2e}
-\usepackage{algorithmicx}
+\usepackage{algorithmic}
 
 \graphicspath{{img/},{img-results/}}
 
