--- a/packages.tex
+++ b/packages.tex
@@ -34,8 +34,6 @@
 \usepackage{subfigure}
 \usepackage{scrhack}
 
-\usepackage{ext/user}
-
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{transparent}
@@ -43,3 +41,4 @@
 % Times New
 \usepackage{newtxtext}
 \usepackage{newtxmath}
+\usepackage{pifont}
