--- a/settings.tex
+++ b/settings.tex
@@ -36,4 +36,8 @@
 
 
 % eigene Definitionen
-\newcommand{\BigO}[1]{$\text{O}\left(#1\right)$}
+\newcommand{\BigO}[1]{$\text{O}(#1)$}
+\newcommand{\mergedcell}[2][l]{\begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
+\newcommand{\cmark}{\ding{51}}
+\newcommand{\ccross}{\ding{55}}
+\newcommand{\angled}[1]{\rotatebox{25}{#1}}
