--- a/theory.tex
+++ b/theory.tex
@@ -1,8 +1,13 @@
 \chapter{Theorie}
 
 \input{depositions}
+\clearpage
 \input{md}
+\clearpage
 \input{kmc}
+\clearpage
 \input{datastructures}
+\clearpage
 \input{parsivald}
+\clearpage
 \input{prerequisites}
