--- a/literature.bib
+++ b/literature.bib
@@ -12,6 +12,15 @@
 	author = {Puurunen, Riikka L.},
 	year = {2005},
 	pages = {121301},
-	annote = {steric hindrance and {OH} concentration, temperature-dependence, saturation},
 	file = {ALD_Review_2005.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2E677H5R/ALD_Review_2005.pdf:application/pdf}
+}
+
+@phdthesis{lorenz_entwicklung_2012,
+	title = {Entwicklung und Verifikation eines kombinierten Kinetic Monte Carlo / Molekulardynamik Modells zur Simulation von Schichtabscheidungen},
+	url = {http://www.qucosa.de/recherche/frontdoor/?tx_slubopus4frontend[id]=10631},
+	urldate = {2014-07-24},
+	author = {Lorenz, Erik E.},
+	month = jun,
+	year = {2012},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/I3FQ3MIW/Lorenz - 2012 - Entwicklung und Verifikation eines kombinierten Ki.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/P2QMAQEP/frontdoor.html:text/html}
 }
