--- a/packages.tex
+++ b/packages.tex
@@ -31,7 +31,7 @@
 
 \usepackage[plainpages=false,pdfpagelabels]{hyperref}
 \usepackage{amssymb}
-\usepackage{subfigure}
+\usepackage[font=normal]{subcaption}
 \usepackage{scrhack}
 
 \usepackage{graphicx}
