datastructure BigO table added

--- a/packages.tex
+++ b/packages.tex
@@ -6,6 +6,7 @@
 	bibgerm, % Deutsche Bibliographie
 	calc, % Erweiterung der arithmetischen Funktionen in
 	color, % epigraph,
+  colortbl,
 	scrpage2, % Kopf- und Fußzeilen flexibel gestalten
 	tabularx, % Blocksatzspalten
 	ngerman,
