--- a/datastructures.tex
+++ b/datastructures.tex
@@ -1,25 +1,52 @@
-\section{Effiziente Datenstrukturen für räumliche Positionen}
+\section{Effiziente Datenstrukturen}
 
 \todo{proofread and declutter whole section}
 \todo{subsubsections}
-Um große Simulationsräume mit vielen Millionen Atomen verwalten zu können, ist es offensichtlich nicht sinnvoll, alle Atome in einer Liste halten zu wollen.
-Statt dessen muss man verfügbare Datenstrukturen auf ihre Leistung hinsichtlich der notwendigen Operationen betrachten.
-Diese Operationen werden durch die Erfassung und Manipulation atomarer Positionen notwendig:
+Für die Betrachtung großer Systeme ist die Nutzung spezieller Datenstrukturen und Algorithmen notwendig, da naive Ansätze schnell an ihre Grenzen stoßen.
+Unterschiede ergeben sich jeweils in Laufzeit und Speicherverbrauch für verschiedene Operationen, die in \ref{tab:data-ops}
 
-\begin{itemize}
-\item Konstruktion \\
-Der Aufbau des Simulationsraumes aus dem Substrat. Da nur einmalig durchgeführt, steht der Zeitaufwand im Hintergrund. Wichtiger ist der erwartete Speicherverbrauch.
-\item Hinzufügen \\
-Das Einfügen eines neuen Atomes in die Datenstruktur. Im Idealfall werden Atome in konstanter Zeit \BigO{1}) hinzugefügt.
-\item Aktualisierung \\
-Die Verschiebung von Atomen oder Gruppen von Atomen. Idealerweise ist konstante Zeit \BigO{m} für $m$ Atome möglich.
-\item Ortssuche \\
-Die Suche eines oder mehrerer Atome im Umkreis eines beliebigen Punktes. \BigO{\log{n}} oder besser ist notwendig, da diese Operation neben der Nachbarschaftssuche am häufigsten ausgeführt wird.
-\item Nachbarschaftssuche \\
-Die Suche nach allen Atomen im Umkreis eines anderen Atomes. Algorithmisch meist identisch zur Ortssuche, jedoch am häufigsten benutzt.
-\item Oberflächensuche \\
-Speziell für Wachstums- und Oberflächenprozesse muss die Oberfläche entlang einer Geraden ermittelt werden.
-\end{itemize}
+\begin{table}
+  \centering
+  \begin{tabularx}{\textwidth}{|l|X|}
+    \hline
+    Operation & Beschreibung \\
+    \hline
+
+    Konstruktion & Einmaliger Aufbau der Datenstrukturen aus einer Liste von Atomen \\
+
+    Hinzufügen & Einfügen eines neuen Atomes in die Datenstruktur \\
+
+    Verschieben & Verschiebung von Atomen oder Molekülen. \\
+
+    Entfernung & Entfernung eines Atomes aus der Datenstruktur \\
+
+    Ortssuche & Suche eines oder mehrerer Atome im Umkreis eines beliebigen Punktes \\
+
+    Nachbarschaftssuche & Suche aller Atome im Umkreis eines bestimmten Atomes \\
+
+    Oberflächensuche & Identifizierung der Oberfläche des Systemes entlang einer Gerade \\
+
+    \hline
+  \end{tabularx}
+\end{table}
+
+\begin{table}
+  \centering
+  \begin{tabularx}{\textwidth}{X|cccccccc}
+    Datenstr.  &  Kon.             &  Hin.             &  Ver.             &  Entf.            &  Ortss.            &  NB-S.            &  Oberfl.         &  RAM                     \\
+    \hline
+    Atomliste  &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cR{$n$}          &  \cR{$n$}         &  \cR{$n$}        &  \cG{$n$}                \\
+    NB-Listen  &  \cR{$n^2$}       &  \cR{$n$}         &  \cR{$n$}         &  \cR{$n$}         &  \cR{$n$}          &  \cG{$1$}         &  \cR{$n$}        &  \cR{$\frac{r}{s}n^2$}   \\
+    Binning    &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$r$}          &  \cG{$r$}         &  \cR{$c$}        &  \cY{$n+c$}              \\
+    Octree     &  \cY{$n\log{c}$}  &  \cY{$\log{c}$}   &  \cY{$\log{c}$}   &  \cG{$1$}         &  \cY{$r\log{c}$}   &  \cY{$r\log{c}$}  &  \cY{$\log{c}$}  &  \cG{$n+c^\frac{2}{3}$}  \\
+    k-d-Baum   &  \cY{$n\log{n}$}  &  \cY{$\log{n}$}   &  \cY{$\log{n}$}   &  \cY{$\log{n}$}   &  \cG{$\log{n}$}    &  \cG{$r\log{n}$}  &  \cY{$\log{n}$}  &  \cG{$n$}                \\
+    Delaunay   &  \cY{$n\log{n}$}  &  \cY{$k\log{k}$}  &  \cY{$k\log{k}$}  &  \cY{$k\log{k}$}  &  \cG{$r+\log{n}$}  &  \cG{$r$}         &  \cG{$1$}        &  \cY{$nk$}               \\
+    \hline
+    %Atomfeld  &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cR{$n$}          &  \cR{$n$}         &  \cR{$n$}        &  \cG{$n$}                \\
+  \end{tabularx}
+  \caption[asd]{$n$ - Zahl der Atome; $c$ - Zahl der Zellen ($c<n$); $r$ - Suchradius; $k$ - max. Koordination (Zahl direkter Nachbarn)}
+\end{table}
+
 
 \subsection{Globale Atomlisten}
 
@@ -89,7 +116,7 @@ Die einfachste Implementierung sieht in 3 Raumdimensionen ein dreidimensionales 
 ``Linear'' bezieht sich hierbei sowohl auf die Speicherkomplexität im Verhältnis zur Anzahl der Zellen, andererseits auf die Zugriffszeiten bei Suchoperationen. Beliebiger Zugriff ist hierbei hingegen in konstanter Zeit möglich.
 Orts- und Nachbarschaftssuchen geschehen in \BigO{n/N} mit $N$ Zellen für realistische Systeme, Aktualisieren und Hinzufügen geschehen in \BigO{m}.
 Das Hauptproblem dieser Methode ist die potentiell große Anzahl leerer Zellen, die einerseits Speicher verbraucht, andererseits bei Oberflächensuchen zu übermäßig vielen Abfragen führt oder separate Buchhaltung benötigt (Beispiel: Heightmap).
-Somit sind eigentlich zweidimensionale Oberflächenprobleme in drei Dimensionen nur kubischem Speicheraufwand möglich.
+Somit sind eigentlich zweidimensionale Oberflächenprobleme in drei Dimensionen mit nur kubischem Speicheraufwand möglich.
 
 \subsection{Octree-Binning}
 
@@ -176,9 +203,9 @@ Der Zentrale Vertreter ist die Delaunay-Triangulation, die für eine Menge von P
 \item Innerhalb des Umkreises eines Simplexes befinden sich keine weiteren Punkte
 \item Die Vereinigung aller Simplexe ergibt die konvexe Hülle
 \item Ein Punkt teilt sich mit seinem nächsten Nachbarn mindestens einen Simplex \\
-$\Leftrightarrow$ Nächstnachbargraph $\subset$ Delaunay-Triangulation
-%% \item Die Delaunay-Triangulation und das Voronoi-Diagramm über die selben Punkte sind dual\\
-%% $\Rightarrow$ Allgemeine Nachbarschaftssuche ist \BigO{n\log n}
+  $\Leftrightarrow$ Nächstnachbargraph $\subset$ Delaunay-Triangulation
+  %% \item Die Delaunay-Triangulation und das Voronoi-Diagramm über die selben Punkte sind dual\\
+  %% $\Rightarrow$ Allgemeine Nachbarschaftssuche ist \BigO{n\log n}
 \end{itemize}
 
 Eine Delaunay-Triangulation lässt sich aus einer Punktmenge in \BigO{n\log n}\todo{Referenz} ausführen, wofür eine Vielzahl an Algorithmen zur Verfügung stehen. \todo{Referenz}
