--- a/md.tex
+++ b/md.tex
@@ -92,7 +92,11 @@ Der Druck wird dabei über die Virialgleichung \todo{für ideale Gase?} ermittel
   \centering
   \def\svgwidth{0.8\textwidth}
   \input{img/cg-gradient.pdf_tex}
-  \caption[CG-Methode]{CG-Methode}
+  \caption[CG-Methode]{Klassische Minimierung durch konjugierte Gradienten:\\
+a) Optimale Schrittlänge\\
+b) Kleine Schrittlänge $\Rightarrow$ viele unnötige Schritte\\
+c) Große Schrittlänge $\Rightarrow$ langsames Konvergenzverhalten
+}
   \label{fig:cg-gradient}
 \end{figure}
 
