--- a/metadaten.tex
+++ b/metadaten.tex
@@ -2,12 +2,12 @@
 %	Metadaten
 %======================================================================
 %	$Id$
-%	Matthias Kupfer
+%	Original template: Matthias Kupfer
 %======================================================================
 
 \newcommand{\dcsubject}{Masterarbeit}
-\newcommand{\dctitle}{Gasphasenoberflächenabscheidungsreaktionsmolekulardynamiksimulationen!}
-\newcommand{\dcsubtitle}{~} % Untertitel, falls erforderlich
+\newcommand{\dctitle}{Modellierung und Simulation von Schichtabscheidungen aus der Gasphase}
+\newcommand{\dcsubtitle}{} % Untertitel, falls erforderlich
 
 \newcommand{\dcauthortitle}{B.Sc.}
 \newcommand{\dcauthorlastname}{Lorenz}
@@ -17,18 +17,25 @@
 
 \newcommand{\dcplace}{Chemnitz} % Ort, kann an der TU meist so bleiben
 \newcommand{\dcuni}{Technische Universität \dcplace}
+\newcommand{\dcdepart}{Fakultät für Naturwissenschaften} % Fakultätsangabe
+\newcommand{\dcinstitute}{Institut für Physik}
+
+\newcommand{\dcinstituteext}{Fraunhofer-Institut für Elektronische Nanosysteme}
+\newcommand{\dcdepartext}{Abteilung Back-End of Line} % Fakultätsangabe
 
 \newcommand{\dcexaminerfirst}{Prof. Dr. Stefan E. Schulz}
 \newcommand{\dcdepartfirst}{Fakultät für Elektrotechnik und Informationstechnik} % Fakultätsangabe
 \newcommand{\dcproffirst}{Technologien der Nanoelektronik} % Angabe der Professur
 
 \newcommand{\dcexaminersecond}{N.N.}
-\newcommand{\dcdepartsecond}{Fakultät für Naturwissenschaften} % Fakultätsangabe
+\newcommand{\dcdepartsecond}{\dcdepart} % Fakultätsangabe
 \newcommand{\dcprofsecond}{N.N.} % Angabe der Professur
-\newcommand{\dcinstitutesecond}{Institut für Physik}
+\newcommand{\dcinstitutesecond}{\dcinstitute}
 
-\newcommand{\dcdepartthird}{Fraunhofer-Institut für Elektronische Nanosysteme} 
-\newcommand{\dcprofthird}{Abteilung Back-End of Line}
+\newcommand{\dcadvisor}{Dr. Jörg Schuster}
+\newcommand{\dcinstituteadvisor}{\dcinstituteext}
+\newcommand{\dcdepartadvisor}{\dcdepartext}
+\newcommand{\dcgroupadvisor}{Simulationsgruppe}
 
 \newcommand{\dckeywords}{Enter Keywords Here}
 
