--- a/titel.tex
+++ b/titel.tex
@@ -31,8 +31,8 @@
 	\begin{center}
 		\raisebox{-1ex}{\includegraphics[scale=1.1]{img/logo_tu_tailored}}\\
 		\hrulefill \\[1em]
-		{\Large\dcdepartsecond}\\[0.2em] 
-		\dcinstitutesecond\\[0.5em]
+		{\Large\dcdepart}\\[0.2em] 
+		\dcinstitute\\[0.5em]
 %		{\Large\dcdepartsecond}\\[0.5em] 
 %		\dcprofsecond
 	\end{center}
@@ -40,8 +40,8 @@
 	\begin{center}
 		\raisebox{-1ex}{\includegraphics[scale=1.2]{img/logo_fhg_tailored}}\\
 		\hrulefill \\[1em]
-		{\Large\dcdepartthird}\\[0.2em] 
-		\dcprofthird\\[0.5em]
+		{\Large\dcinstituteext}\\[0.2em] 
+		\dcdepartext\\[0.5em]
 	\end{center}
 	\vspace*{0.5cm}
 }
@@ -82,10 +82,13 @@
 \publishers{
 		\begin{tabbing}
 			\hspace*{10.1em}\=\kill
-			\hspace*{4.8em}{Gutachter:}\>\dcexaminerfirst\\[-0.2em]
+			\hspace*{4.8em}{Prüfer:}\>\dcexaminerfirst\\[-0.2em]
 								  \>{\small\dcproffirst}\\[0.2em]
 								  \>\dcexaminersecond\\[-0.2em]
 								  \>{\small\dcprofsecond}\\
+\\
+      \hspace*{4.8em}{Betreuer:}\>\dcadvisor\\[-0.2em]
+                  \>{\small\dcinstituteadvisor}
 		\end{tabbing}	
 	\vspace*{-7em}
 }
